# CultureDx

./: .gitattributes  .gitignore  AGENTS.md  BRANCH_STATUS.md  CLAUDE.md  HANDOFF_CLAUDE_CODE.md  LICENSE  Makefile  R21V2_ACTUAL_ROOT_CAUSE.md  README.md  REBASE_PLAN.md  pyproject.toml
configs/: base.yaml  debate.yaml  evidence.yaml  hied.yaml  hied_32b.yaml  hied_dtv.yaml  hied_dtv_v2.yaml  hied_dtv_v2_reasoning.yaml  mas.yaml  paths.yaml  psycot.yaml  reasoning.yaml  single_baseline.yaml  specialist.yaml  v2.4_final.yaml  vllm_32b.yaml  vllm_awq.yaml  vllm_awq_reasoning.yaml  vllm_gemma3_12b.yaml  vllm_qwen3_8b.yaml
docs/: RETRACTION_NOTICE_2026_04_22.md  architecture.md  developer_guide.md  improvement_queue.md  module_replacement_memo.md  operations.md  paper_narrative_v2.md  somatization_benchmark.md  study_overview.md  triage-routing.md
final_combined_deliverable/: FINAL_COMBINED_PLAN.md  README.md
instruction_prompt/: CLAUDE_LINGXIDIAG_ALIGNMENT.md  CLAUDE_LINGXIDIAG_V2.md
master_cleanup/: README.md  WHOLE_REPO_REVIEW.md  cleanup.sh  fix_cli_seed.patch  fix_test_triage.patch  r16_bypass_logic_engine.patch
outputs/: bootstrap_ci_final.json  bootstrap_ci_final.md  bootstrap_ci_results.md  calibrator_tuning_results.json  calibrator_update_validation.json  checker_fn_analysis.json  comorbidity_analysis.json  comorbidity_analysis.md  comorbidity_classifier_results.json  comorbidity_probe_results.json  comorbidity_threshold_tuning.json  cross_dataset_evidence_gap_bootstrap.json  demographics_ablation.json  evidence_edaic_pid.txt  evidence_gap_analysis.json  (+22 more)
(+1873 files in other folders)
