[project]
name = "culturedx"
version = "0.1.0"
description = "Culture-Adaptive Diagnostic MAS with Evidence Grounding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "omegaconf>=2.3",
    "httpx>=0.27",
    "jinja2>=3.1",
    "click>=8.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
retrieval = [
    "sentence-transformers>=3.0",
]

[project.scripts]
culturedx = "culturedx.pipeline.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/culturedx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests requiring Ollama",
    "slow: marks slow tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
